Skipper/obj/Debug/netcoreapp2.1/PenguineseParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Rolis\Documents\GitHub\SkipperLexer\Skipper\Penguinese.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Skipper {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class PenguineseParser : Parser {
	public const int
		NUMERAL=1, OPERATOR=2, PLUS=3, COND=4, SepCOND=5, TERM=6, COM=7, OP=8, 
		CP=9, OBR=10, CBR=11, OCB=12, CCB=13, DEC=14, EQUALS=15, COL=16, TRUE=17, 
		FALSE=18, IF=19, THEN=20, WHILE=21, FOR=22, FUNC=23, MAIN=24, DOUBLE=25, 
		CHARACTER=26, TEXT=27, NUMBER=28, ARRAYOF=29, BOOLEAN=30, HALT=31, RETURN=32, 
		READ=33, WRITE=34, LETTER=35, CHAR=36, WORD=37, STRING=38, WHITESPACE=39;
	public const int
		RULE_start = 0, RULE_bloqueCodigo = 1, RULE_expresion = 2, RULE_declararVar = 3, 
		RULE_asignVar = 4, RULE_asignSimple = 5, RULE_decVar = 6, RULE_tipoVar = 7, 
		RULE_tipoVarS = 8, RULE_nombreVar = 9, RULE_variable = 10, RULE_valorVar = 11, 
		RULE_valorEntero = 12, RULE_valorDec = 13, RULE_valorChar = 14, RULE_valorString = 15, 
		RULE_valorBool = 16, RULE_math = 17, RULE_mathSeq = 18, RULE_valorNum = 19, 
		RULE_ciclo = 20, RULE_condicional = 21, RULE_valorCond = 22, RULE_condSeq = 23, 
		RULE_seccionFor = 24, RULE_imprimirValor = 25, RULE_escribirValor = 26;
	public static readonly string[] ruleNames = {
		"start", "bloqueCodigo", "expresion", "declararVar", "asignVar", "asignSimple", 
		"decVar", "tipoVar", "tipoVarS", "nombreVar", "variable", "valorVar", 
		"valorEntero", "valorDec", "valorChar", "valorString", "valorBool", "math", 
		"mathSeq", "valorNum", "ciclo", "condicional", "valorCond", "condSeq", 
		"seccionFor", "imprimirValor", "escribirValor"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'+'", null, null, "';'", "','", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'.'", "'='", "':'", "'true'", "'false'", "'if'", 
		"'then'", "'while'", "'for'", "'func'", "'main'", "'double'", "'character'", 
		"'text'", "'number'", "'arrayof'", "'boolean'", "'NOOT NOOT'", "'regresar'", 
		"'imprimirVar'", "'escribirVar'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NUMERAL", "OPERATOR", "PLUS", "COND", "SepCOND", "TERM", "COM", 
		"OP", "CP", "OBR", "CBR", "OCB", "CCB", "DEC", "EQUALS", "COL", "TRUE", 
		"FALSE", "IF", "THEN", "WHILE", "FOR", "FUNC", "MAIN", "DOUBLE", "CHARACTER", 
		"TEXT", "NUMBER", "ARRAYOF", "BOOLEAN", "HALT", "RETURN", "READ", "WRITE", 
		"LETTER", "CHAR", "WORD", "STRING", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Penguinese.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PenguineseParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class StartContext : ParserRuleContext {
		public ITerminalNode FUNC() { return GetToken(PenguineseParser.FUNC, 0); }
		public ITerminalNode MAIN() { return GetToken(PenguineseParser.MAIN, 0); }
		public ITerminalNode OP() { return GetToken(PenguineseParser.OP, 0); }
		public ITerminalNode CP() { return GetToken(PenguineseParser.CP, 0); }
		public ITerminalNode OCB() { return GetToken(PenguineseParser.OCB, 0); }
		public BloqueCodigoContext bloqueCodigo() {
			return GetRuleContext<BloqueCodigoContext>(0);
		}
		public ITerminalNode CCB() { return GetToken(PenguineseParser.CCB, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; Match(FUNC);
			State = 55; Match(MAIN);
			State = 56; Match(OP);
			State = 57; Match(CP);
			State = 58; Match(OCB);
			State = 59; bloqueCodigo();
			State = 60; Match(CCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BloqueCodigoContext : ParserRuleContext {
		public ExpresionContext[] expresion() {
			return GetRuleContexts<ExpresionContext>();
		}
		public ExpresionContext expresion(int i) {
			return GetRuleContext<ExpresionContext>(i);
		}
		public BloqueCodigoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bloqueCodigo; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterBloqueCodigo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitBloqueCodigo(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBloqueCodigo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BloqueCodigoContext bloqueCodigo() {
		BloqueCodigoContext _localctx = new BloqueCodigoContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_bloqueCodigo);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 62; expresion();
				}
				}
				State = 65;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << DOUBLE) | (1L << CHARACTER) | (1L << TEXT) | (1L << NUMBER) | (1L << ARRAYOF) | (1L << BOOLEAN) | (1L << HALT) | (1L << READ) | (1L << WRITE) | (1L << LETTER) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpresionContext : ParserRuleContext {
		public ITerminalNode TERM() { return GetToken(PenguineseParser.TERM, 0); }
		public DeclararVarContext declararVar() {
			return GetRuleContext<DeclararVarContext>(0);
		}
		public AsignSimpleContext asignSimple() {
			return GetRuleContext<AsignSimpleContext>(0);
		}
		public MathContext math() {
			return GetRuleContext<MathContext>(0);
		}
		public CicloContext ciclo() {
			return GetRuleContext<CicloContext>(0);
		}
		public ImprimirValorContext imprimirValor() {
			return GetRuleContext<ImprimirValorContext>(0);
		}
		public EscribirValorContext escribirValor() {
			return GetRuleContext<EscribirValorContext>(0);
		}
		public ITerminalNode HALT() { return GetToken(PenguineseParser.HALT, 0); }
		public ExpresionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expresion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterExpresion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitExpresion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpresion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpresionContext expresion() {
		ExpresionContext _localctx = new ExpresionContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_expresion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				State = 67; declararVar();
				}
				break;

			case 2:
				{
				State = 68; asignSimple();
				}
				break;

			case 3:
				{
				State = 69; math();
				}
				break;

			case 4:
				{
				State = 70; ciclo();
				}
				break;

			case 5:
				{
				State = 71; imprimirValor();
				}
				break;

			case 6:
				{
				State = 72; escribirValor();
				}
				break;

			case 7:
				{
				State = 73; Match(HALT);
				}
				break;
			}
			State = 76; Match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclararVarContext : ParserRuleContext {
		public DecVarContext decVar() {
			return GetRuleContext<DecVarContext>(0);
		}
		public AsignVarContext asignVar() {
			return GetRuleContext<AsignVarContext>(0);
		}
		public DeclararVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declararVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterDeclararVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitDeclararVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclararVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclararVarContext declararVar() {
		DeclararVarContext _localctx = new DeclararVarContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_declararVar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				State = 78; decVar();
				}
				break;

			case 2:
				{
				State = 79; asignVar();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsignVarContext : ParserRuleContext {
		public AsignVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asignVar; } }
	 
		public AsignVarContext() { }
		public virtual void CopyFrom(AsignVarContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AsignarValorContext : AsignVarContext {
		public TipoVarSContext tipoVarS() {
			return GetRuleContext<TipoVarSContext>(0);
		}
		public NombreVarContext nombreVar() {
			return GetRuleContext<NombreVarContext>(0);
		}
		public ITerminalNode EQUALS() { return GetToken(PenguineseParser.EQUALS, 0); }
		public ValorVarContext valorVar() {
			return GetRuleContext<ValorVarContext>(0);
		}
		public AsignarValorContext(AsignVarContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterAsignarValor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitAsignarValor(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsignarValor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AsignarVariableContext : AsignVarContext {
		public TipoVarSContext tipoVarS() {
			return GetRuleContext<TipoVarSContext>(0);
		}
		public NombreVarContext nombreVar() {
			return GetRuleContext<NombreVarContext>(0);
		}
		public ITerminalNode EQUALS() { return GetToken(PenguineseParser.EQUALS, 0); }
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public AsignarVariableContext(AsignVarContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterAsignarVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitAsignarVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsignarVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AsignVarContext asignVar() {
		AsignVarContext _localctx = new AsignVarContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_asignVar);
		try {
			State = 92;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new AsignarValorContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 82; tipoVarS();
				State = 83; nombreVar();
				State = 84; Match(EQUALS);
				State = 85; valorVar();
				}
				break;

			case 2:
				_localctx = new AsignarVariableContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; tipoVarS();
				State = 88; nombreVar();
				State = 89; Match(EQUALS);
				State = 90; variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AsignSimpleContext : ParserRuleContext {
		public VariableContext[] variable() {
			return GetRuleContexts<VariableContext>();
		}
		public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public ITerminalNode EQUALS() { return GetToken(PenguineseParser.EQUALS, 0); }
		public ValorNumContext valorNum() {
			return GetRuleContext<ValorNumContext>(0);
		}
		public AsignSimpleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asignSimple; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterAsignSimple(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitAsignSimple(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAsignSimple(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AsignSimpleContext asignSimple() {
		AsignSimpleContext _localctx = new AsignSimpleContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_asignSimple);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; variable();
			State = 95; Match(EQUALS);
			State = 98;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case NUMERAL:
				{
				State = 96; valorNum();
				}
				break;
			case LETTER:
			case WORD:
				{
				State = 97; variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecVarContext : ParserRuleContext {
		public TipoVarContext tipoVar() {
			return GetRuleContext<TipoVarContext>(0);
		}
		public NombreVarContext[] nombreVar() {
			return GetRuleContexts<NombreVarContext>();
		}
		public NombreVarContext nombreVar(int i) {
			return GetRuleContext<NombreVarContext>(i);
		}
		public ITerminalNode[] COM() { return GetTokens(PenguineseParser.COM); }
		public ITerminalNode COM(int i) {
			return GetToken(PenguineseParser.COM, i);
		}
		public DecVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterDecVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitDecVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecVarContext decVar() {
		DecVarContext _localctx = new DecVarContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_decVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; tipoVar();
			State = 101; nombreVar();
			State = 106;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COM) {
				{
				{
				State = 102; Match(COM);
				State = 103; nombreVar();
				}
				}
				State = 108;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TipoVarContext : ParserRuleContext {
		public ITerminalNode ARRAYOF() { return GetToken(PenguineseParser.ARRAYOF, 0); }
		public TipoVarSContext tipoVarS() {
			return GetRuleContext<TipoVarSContext>(0);
		}
		public ITerminalNode OBR() { return GetToken(PenguineseParser.OBR, 0); }
		public ITerminalNode NUMERAL() { return GetToken(PenguineseParser.NUMERAL, 0); }
		public ITerminalNode CBR() { return GetToken(PenguineseParser.CBR, 0); }
		public TipoVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipoVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterTipoVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitTipoVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipoVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TipoVarContext tipoVar() {
		TipoVarContext _localctx = new TipoVarContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_tipoVar);
		try {
			State = 116;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ARRAYOF:
				EnterOuterAlt(_localctx, 1);
				{
				State = 109; Match(ARRAYOF);
				State = 110; tipoVarS();
				State = 111; Match(OBR);
				State = 112; Match(NUMERAL);
				State = 113; Match(CBR);
				}
				break;
			case DOUBLE:
			case CHARACTER:
			case TEXT:
			case NUMBER:
			case BOOLEAN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 115; tipoVarS();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TipoVarSContext : ParserRuleContext {
		public ITerminalNode CHARACTER() { return GetToken(PenguineseParser.CHARACTER, 0); }
		public ITerminalNode DOUBLE() { return GetToken(PenguineseParser.DOUBLE, 0); }
		public ITerminalNode BOOLEAN() { return GetToken(PenguineseParser.BOOLEAN, 0); }
		public ITerminalNode NUMBER() { return GetToken(PenguineseParser.NUMBER, 0); }
		public ITerminalNode TEXT() { return GetToken(PenguineseParser.TEXT, 0); }
		public TipoVarSContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipoVarS; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterTipoVarS(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitTipoVarS(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipoVarS(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TipoVarSContext tipoVarS() {
		TipoVarSContext _localctx = new TipoVarSContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_tipoVarS);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOUBLE) | (1L << CHARACTER) | (1L << TEXT) | (1L << NUMBER) | (1L << BOOLEAN))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NombreVarContext : ParserRuleContext {
		public ITerminalNode WORD() { return GetToken(PenguineseParser.WORD, 0); }
		public ITerminalNode LETTER() { return GetToken(PenguineseParser.LETTER, 0); }
		public NombreVarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nombreVar; } }
		public override void EnterRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.EnterNombreVar(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IPenguineseListener typedListener = listener as IPenguineseListener;
			if (typedListener != null) typedListener.ExitNombreVar(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPenguineseVisitor<TResult> typedVisitor = visitor as IPenguineseVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNombreVar(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NombreVarContext nombreVar() {
		NombreVarContext _localctx = new NombreVarContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_nombreVar);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			_la = _input.La(1);
			if ( !(_la==LETTER || _la==WORD) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}
